Fix: add base href for GitHub Pages subdirectory

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/bypa/">
     <title>Byron Altamirano | Psicólogo Clínico & Estratega Digital</title>
     <meta name="description" content="Byron Altamirano - Psicólogo clínico, estratega digital y creador de contenido. Mentorías en marca personal y entrenamiento asertivo.">
     <meta name="keywords" content="psicólogo clínico, estratega digital, marca personal, entrenamiento asertivo, Byron Altamirano, neurociencia, salud mental">
