cambio de <base href=> a relativas ./

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/bypa/">
     <title>Byron Altamirano | Psicólogo Clínico & Estratega Digital</title>
     <meta name="description" content="Byron Altamirano - Psicólogo clínico, estratega digital y creador de contenido. Mentorías en marca personal y entrenamiento asertivo.">
     <meta name="keywords" content="psicólogo clínico, estratega digital, marca personal, entrenamiento asertivo, Byron Altamirano, neurociencia, salud mental">
@@ -14,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- ========== NAVBAR ========== -->
@@ -70,7 +69,7 @@
             </div>
             <div class="hero-image" data-animate="fade-left">
                 <div class="hero-img-wrapper">
-                    <img src="assets/img/bypa_foto_hero.png" alt="Byron Altamirano - Psicólogo Clínico" loading="eager">
+                    <img src="./assets/img/bypa_foto_hero.png" alt="Byron Altamirano - Psicólogo Clínico" loading="eager">
                     <div class="hero-img-border"></div>
                 </div>
                 <div class="hero-badge">
@@ -92,7 +91,7 @@
             <div class="about-grid">
                 <div class="about-image" data-animate="fade-right">
                     <div class="about-img-wrapper">
-                        <img src="assets/img/bypa_foto_sobremi.png" alt="Byron Altamirano - Sobre Mí" loading="lazy">
+                        <img src="./assets/img/bypa_foto_sobremi.png" alt="Byron Altamirano - Sobre Mí" loading="lazy">
                     </div>
                     <div class="about-img-decoration"></div>
                 </div>
@@ -397,6 +396,6 @@
         <span class="whatsapp-pulse"></span>
     </a>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
