fix: replace glitch effect with elegant word-highlight animation

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="container">
             <div class="section-header" data-animate="fade-up">
                 <span class="section-tag dark">Lo que ofrezco</span>
-                <h2 class="section-title glitch-text" data-text="Servicios Disponibles">Servicios Disponibles</h2>
+                <h2 class="section-title">Servicios <span class="word-highlight">Disponibles</span></h2>
             </div>
             <div class="servicios-grid">
                 <!-- SERVICIO 1 -->
