feat: redesign to blue/white/black palette inspired by Peterson and Robbins

--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
         </div>
     </section>
 
+    <!-- ========== CITAS / QUOTES (Peterson-style) ========== -->
+    <section class="citas" id="citas">
+        <div class="container">
+            <div class="citas-content" data-animate="fade-up">
+                <p class="cita-quote">El verdadero poder no está en la viralidad, sino en la capacidad de transformar
+                    vidas con cada palabra que compartes.</p>
+                <div class="cita-divider"></div>
+                <p class="cita-author">Byron Altamirano</p>
+                <p class="cita-role">Psicólogo Clínico & Estratega Digital</p>
+            </div>
+        </div>
+    </section>
+
     <!-- ========== STATS SECTION ========== -->
     <section class="stats" id="stats">
         <div class="container">
@@ -310,6 +323,44 @@
         </div>
     </section>
 
+    <!-- ========== PILARES (Robbins-style) ========== -->
+    <section class="pilares" id="pilares">
+        <div class="container">
+            <div class="section-header" data-animate="fade-up">
+                <span class="section-tag">Áreas de Enfoque</span>
+                <h2 class="section-title light">Pilares de <span class="word-highlight">Transformación</span></h2>
+                <p class="section-desc light">Domina cada dimensión para convertirte en un referente de impacto digital
+                </p>
+            </div>
+            <div class="pilares-grid">
+                <div class="pilar-card" data-animate="fade-up" data-delay="100">
+                    <div class="pilar-icon"><i class="fas fa-brain"></i></div>
+                    <h3 class="pilar-title">Psicología Clínica</h3>
+                    <p class="pilar-text">Base científica y rigor profesional. El conocimiento clínico es el motor que
+                        impulsa contenidos con valor real y credibilidad.</p>
+                </div>
+                <div class="pilar-card" data-animate="fade-up" data-delay="200">
+                    <div class="pilar-icon"><i class="fas fa-bullhorn"></i></div>
+                    <h3 class="pilar-title">Marca Personal</h3>
+                    <p class="pilar-text">Estrategia orgánica para construir tu presencia digital, posicionarte como
+                        autoridad y conectar con tu audiencia ideal.</p>
+                </div>
+                <div class="pilar-card" data-animate="fade-up" data-delay="300">
+                    <div class="pilar-icon"><i class="fas fa-dna"></i></div>
+                    <h3 class="pilar-title">Neurociencia</h3>
+                    <p class="pilar-text">Entender cómo funciona el cerebro para crear mensajes que detienen el scroll y
+                        generan conexión emocional genuina.</p>
+                </div>
+                <div class="pilar-card" data-animate="fade-up" data-delay="400">
+                    <div class="pilar-icon"><i class="fas fa-fist-raised"></i></div>
+                    <h3 class="pilar-title">Entrenamiento Asertivo</h3>
+                    <p class="pilar-text">Comunicación, resiliencia y toma de decisiones basadas en evidencia para una
+                        mentalidad de alto rendimiento.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- ========== TESTIMONIOS / TRANSFORMACION ========== -->
     <section class="testimonios" id="testimonios">
         <div class="container">
@@ -374,6 +425,21 @@
                     <i class="fas fa-chevron-right"></i>
                 </button>
                 <div class="carousel-dots"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ========== CTA BANNER ========== -->
+    <section class="cta-banner">
+        <div class="container">
+            <div class="cta-banner-content" data-animate="fade-up">
+                <h2 class="cta-banner-title">¿Listo para transformar tu mensaje y convertirte en referente?</h2>
+                <p class="cta-banner-text">Más de 100.000 personas ya confían en mi método. El próximo paso lo das tú.
+                </p>
+                <a href="#contacto" class="btn-white">
+                    <i class="fas fa-rocket"></i>
+                    <span>Empieza Ahora</span>
+                </a>
             </div>
         </div>
     </section>
@@ -447,12 +513,44 @@
         </div>
     </section>
 
-    <!-- ========== FOOTER ========== -->
-    <footer class="footer">
+    <!-- ========== ENHANCED FOOTER ========== -->
+    <footer class="footer-enhanced">
         <div class="container">
-            <div class="footer-content">
-                <p class="footer-text">© 2026 Byron Altamirano — Todos los derechos reservados</p>
-                <div class="footer-social">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <a href="#hero" class="nav-logo">
+                        <img src="./assets/img/logo.svg" alt="Byron Altamirano Logo" class="logo-img"
+                            style="height:60px;">
+                    </a>
+                    <p>Transformo el conocimiento clínico en comunidades digitales de alto impacto. +100K de comunidad
+                        digital.</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Links Rápidos</h4>
+                    <ul>
+                        <li><a href="#hero"><i class="fas fa-chevron-right"></i> Inicio</a></li>
+                        <li><a href="#stats"><i class="fas fa-chevron-right"></i> Resultados</a></li>
+                        <li><a href="#servicios"><i class="fas fa-chevron-right"></i> Servicios</a></li>
+                        <li><a href="#about"><i class="fas fa-chevron-right"></i> Sobre Mí</a></li>
+                        <li><a href="#contacto"><i class="fas fa-chevron-right"></i> Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Redes Sociales</h4>
+                    <ul>
+                        <li><a href="https://www.instagram.com/altamirano.psic_clinica" target="_blank"
+                                rel="noopener"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="https://www.tiktok.com/@altamirano.psic_clinica" target="_blank" rel="noopener"><i
+                                    class="fab fa-tiktok"></i> TikTok</a></li>
+                        <li><a href="https://wa.me/593963528767" target="_blank" rel="noopener"><i
+                                    class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                        <li><a href="mailto:baltamiranos@est.ups.edu.ec"><i class="fas fa-envelope"></i> Email</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p class="footer-bottom-text">© 2026 Byron Altamirano — Todos los derechos reservados</p>
+                <div class="footer-bottom-social">
                     <a href="https://www.instagram.com/altamirano.psic_clinica" target="_blank" rel="noopener"
                         aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.tiktok.com/@altamirano.psic_clinica" target="_blank" rel="noopener"
