refactor: restructure sections order and add fullscreen hero with background image

--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
         </div>
     </nav>
 
-    <!-- ========== HERO SECTION ========== -->
-    <section class="hero" id="hero">
-        <div class="hero-bg-shapes">
-            <div class="shape shape-1"></div>
-            <div class="shape shape-2"></div>
-            <div class="shape shape-3"></div>
-        </div>
-        <div class="hero-container">
-            <div class="hero-content" data-animate="fade-right">
+    <!-- ========== HERO FULLSCREEN ========== -->
+    <section class="hero hero-fullscreen" id="hero">
+        <div class="hero-bg-image" style="background-image: url('./assets/img/bypa_foto_hero2.jpeg');"></div>
+        <div class="hero-overlay"></div>
+        <div class="hero-container hero-container-fullscreen">
+            <div class="hero-content hero-content-centered" data-animate="fade-up">
                 <p class="hero-tag">Psicólogo Clínico | Estratega Digital</p>
                 <h1 class="hero-title">
                     <span class="hero-name-line">Byron</span>
@@ -59,6 +56,10 @@
                 </h1>
                 <p class="hero-subtitle">Transformo el conocimiento clínico en <em>comunidades digitales de alto
                         impacto</em></p>
+                <div class="hero-badge-inline">
+                    <span class="badge-number">100K+</span>
+                    <span class="badge-label">Comunidad Digital</span>
+                </div>
                 <div class="hero-buttons">
                     <a href="#stats" class="btn btn-primary">
                         <span>Ver Resultados</span>
@@ -75,17 +76,6 @@
                         class="social-icon" aria-label="TikTok">
                         <i class="fab fa-tiktok"></i>
                     </a>
-                </div>
-            </div>
-            <div class="hero-image" data-animate="fade-left">
-                <div class="hero-img-wrapper">
-                    <img src="./assets/img/bypa_foto_hero.png" alt="Byron Altamirano - Psicólogo Clínico"
-                        loading="eager">
-                    <div class="hero-img-border"></div>
-                </div>
-                <div class="hero-badge">
-                    <span class="badge-number">100K+</span>
-                    <span class="badge-label">Comunidad Digital</span>
                 </div>
             </div>
         </div>
@@ -246,83 +236,6 @@
         </div>
     </section>
 
-    <!-- ========== ABOUT SECTION ========== -->
-    <section class="about" id="about">
-        <div class="container">
-            <div class="about-grid">
-                <div class="about-image" data-animate="fade-right">
-                    <div class="about-img-wrapper">
-                        <img src="./assets/img/bypa_foto_sobremi.png" alt="Byron Altamirano - Sobre Mí" loading="lazy">
-                    </div>
-                    <div class="about-img-decoration"></div>
-                </div>
-                <div class="about-content" data-animate="fade-left">
-                    <span class="section-tag">Conóceme</span>
-                    <h2 class="section-title light">SOBRE MÍ</h2>
-                    <p class="about-text">
-                        Soy <strong>Byron Altamirano</strong>, ecuatoriano y psicólogo clínico en proceso de titulación
-                        por la <strong>UPS</strong>. Desde que era niño supe que mi misión era ayudar a los demás, y hoy
-                        esa pasión se ha convertido en una comunidad digital de más de <strong>100.000 personas</strong>
-                        con las que comparto lo mejor de la salud mental y la neurociencia.
-                    </p>
-                    <p class="about-text">
-                        Pero mi propósito no termina ahí: también impulso a otros psicólogos a construir su propia
-                        comunidad digital, porque estoy convencido de que hoy es vital que los profesionales de la salud
-                        conectemos de verdad con el mundo digital.
-                    </p>
-                    <p class="about-text highlight">
-                        <em>¡Es momento de que tu mensaje llegue a todo el mundo y a quienes más lo necesitan!</em>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- ========== DIFERENCIAL SECTION ========== -->
-    <section class="diferencial" id="diferencial">
-        <div class="container">
-            <div class="section-header" data-animate="fade-up">
-                <span class="section-tag">¿Por qué soy diferente?</span>
-                <h2 class="section-title light">Mi Factor Diferencial</h2>
-                <p class="section-desc light">¿Cómo logré estos resultados de forma 100% orgánica?</p>
-            </div>
-            <div class="diferencial-grid">
-                <div class="dif-card" data-animate="fade-up" data-delay="100">
-                    <div class="dif-icon">
-                        <i class="fas fa-brain"></i>
-                    </div>
-                    <h3 class="dif-title">Psicología Aplicada al Contenido</h3>
-                    <p class="dif-text">No uso "trends" vacíos. Utilizo la neurociencia y el comportamiento humano para
-                        crear mensajes que detienen el scroll y generan conexión real.</p>
-                </div>
-                <div class="dif-card" data-animate="fade-up" data-delay="200">
-                    <div class="dif-icon">
-                        <i class="fas fa-rocket"></i>
-                    </div>
-                    <h3 class="dif-title">Cero Inversión en Publicidad</h3>
-                    <p class="dif-text">He demostrado que no necesitas miles de dólares en anuncios para ser viral. Mi
-                        método se basa en entender el algoritmo, no en pagarle.</p>
-                </div>
-                <div class="dif-card" data-animate="fade-up" data-delay="300">
-                    <div class="dif-icon">
-                        <i class="fas fa-user-shield"></i>
-                    </div>
-                    <h3 class="dif-title">Independencia Total</h3>
-                    <p class="dif-text">Todo lo que ves ha sido gestionado exclusivamente por mí. Te enseño a ser un
-                        profesional autosuficiente que no depende de agencias ni de equipos de edición costosos.</p>
-                </div>
-                <div class="dif-card" data-animate="fade-up" data-delay="400">
-                    <div class="dif-icon">
-                        <i class="fas fa-award"></i>
-                    </div>
-                    <h3 class="dif-title">Ética y Autoridad</h3>
-                    <p class="dif-text">Crecimiento masivo sin perder el rigor profesional. Transformamos el
-                        conocimiento clínico en una comunidad digital que confía en tu palabra.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- ========== PILARES (Robbins-style) ========== -->
     <section class="pilares" id="pilares">
         <div class="container">
@@ -444,6 +357,38 @@
         </div>
     </section>
 
+    <!-- ========== ABOUT SECTION ========== -->
+    <section class="about" id="about">
+        <div class="container">
+            <div class="about-grid">
+                <div class="about-image" data-animate="fade-right">
+                    <div class="about-img-wrapper">
+                        <img src="./assets/img/bypa_foto_sobremi.png" alt="Byron Altamirano - Sobre Mí" loading="lazy">
+                    </div>
+                    <div class="about-img-decoration"></div>
+                </div>
+                <div class="about-content" data-animate="fade-left">
+                    <span class="section-tag">Conóceme</span>
+                    <h2 class="section-title light">SOBRE MÍ</h2>
+                    <p class="about-text">
+                        Soy <strong>Byron Altamirano</strong>, ecuatoriano y psicólogo clínico en proceso de titulación
+                        por la <strong>UPS</strong>. Desde que era niño supe que mi misión era ayudar a los demás, y hoy
+                        esa pasión se ha convertido en una comunidad digital de más de <strong>100.000 personas</strong>
+                        con las que comparto lo mejor de la salud mental y la neurociencia.
+                    </p>
+                    <p class="about-text">
+                        Pero mi propósito no termina ahí: también impulso a otros psicólogos a construir su propia
+                        comunidad digital, porque estoy convencido de que hoy es vital que los profesionales de la salud
+                        conectemos de verdad con el mundo digital.
+                    </p>
+                    <p class="about-text highlight">
+                        <em>¡Es momento de que tu mensaje llegue a todo el mundo y a quienes más lo necesitan!</em>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- ========== CONTACTO SECTION (fusionado con Portfolio CTA) ========== -->
     <section class="contacto" id="contacto">
         <div class="contacto-bg-shapes">
@@ -452,27 +397,9 @@
         </div>
         <div class="container">
             <div class="contacto-content" data-animate="fade-up">
-                <!-- CTA (antes Portfolio) -->
-                <h2 class="cta-title">¿Listo para que tu mensaje trascienda?</h2>
-                <p class="cta-text">
-                    Lo que has visto en este portafolio no es fruto del azar ni de grandes presupuestos. Todo este
-                    impacto es <strong>100% orgánico</strong>, creado y gestionado exclusivamente por mí, sin
-                    inversiones en publicidad ni equipos externos.
-                </p>
-                <p class="cta-text">
-                    He demostrado que una estrategia sólida, basada en la ciencia y la autenticidad, es el motor más
-                    potente para crecer.
-                </p>
-                <p class="cta-text highlight-text">
-                    <em>Hoy, mi propósito es que tú también domines estas herramientas y te conviertas en un
-                        referente.</em>
-                </p>
-
-                <div class="contacto-divider"></div>
-
                 <!-- Contacto directo -->
                 <span class="section-tag">Hablemos</span>
-                <h3 class="contacto-subtitle">Byron Altamirano</h3>
+                <h2 class="cta-title">Conectemos</h2>
                 <p class="contacto-role">Psicólogo Clínico | Estratega Digital | Entrenamiento Asertivo</p>
 
                 <div class="contacto-actions">
