fix: update hero background image to SVG format

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- ========== HERO FULLSCREEN ========== -->
     <section class="hero hero-fullscreen" id="hero">
-        <div class="hero-bg-image" style="background-image: url('./assets/img/bypa_foto_hero2.jpeg');"></div>
+        <div class="hero-bg-image" style="background-image: url('./assets/img/bypa_foto_hero2.svg');"></div>
         <div class="hero-overlay"></div>
         <div class="hero-container hero-container-fullscreen">
             <div class="hero-content hero-content-centered" data-animate="fade-up">
