fix: update quote text and remove decorative quotation icon

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <section class="citas" id="citas">
         <div class="container">
             <div class="citas-content" data-animate="fade-up">
-                <p class="cita-quote">El verdadero poder no está en la viralidad, sino en la capacidad de transformar
-                    vidas con cada palabra que compartes.</p>
+                <p class="cita-quote">"Tu conocimiento es el alivio que alguien busca en silencio; garantizamos que tu
+                    voz sea el encuentro que cambie una vida hoy mismo."</p>
                 <div class="cita-divider"></div>
                 <p class="cita-author">Byron Altamirano</p>
                 <p class="cita-role">Psicólogo Clínico & Estratega Digital</p>
