style: match stat cards design with pilares cards; dark background and glassmorphism

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <section class="stats" id="stats">
         <div class="container">
             <div class="section-header" data-animate="fade-up">
-                <span class="section-tag dark">Impacto Real</span>
-                <h2 class="section-title">Mi método: Datos Reales</h2>
-                <p class="section-desc">Resultados 100% orgánicos, sin inversión en publicidad</p>
+                <span class="section-tag">Impacto Real</span>
+                <h2 class="section-title light">Mi método: Datos Reales</h2>
+                <p class="section-desc light">Resultados 100% orgánicos, sin inversión en publicidad</p>
             </div>
             <div class="stats-grid">
                 <div class="stat-card" data-animate="fade-up" data-delay="100">
