fix: update services copy for marca personal and entrenamiento asertivo

--- a/index.html
+++ b/index.html
@@ -144,18 +144,17 @@
                         <ul class="servicio-features">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Diseñada para profesionales de la salud que buscan transformar su conocimiento en una
-                                comunidad digital de alto impacto.
+                                Convierte tu conocimiento clínico en una comunidad digital con audiencia real y en
+                                crecimiento, sin pagar publicidad.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Te enseño mi método 100% orgánico para posicionarte como un referente en tu área sin
-                                gastar en publicidad.
+                                Aplica el mismo método orgánico con el que construí mi comunidad digital desde cero.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Aprenderás a crear contenido estratégico que conecte con tu audiencia y te brinde
-                                autoridad profesional.
+                                Crea contenido que posicione tu nombre como referente y atraiga pacientes o clientes
+                                de forma natural.
                             </li>
                         </ul>
                     </div>
@@ -177,23 +176,16 @@
                         <ul class="servicio-features">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Un programa de alto rendimiento basado en la neurociencia y la psicología conductual
-                                para potenciar tu liderazgo personal.
+                                Domina el arte de decir lo que piensas sin miedo y con precisión quirúrgica.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                <strong>Comunicación y Habilidades Sociales:</strong> Domina el arte de expresarte con
-                                seguridad y claridad en cualquier entorno.
+                                Construye una mentalidad que no se quiebre ante la presión — con ciencia, no con
+                                frases motivacionales.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                <strong>Resiliencia y Disciplina:</strong> Herramientas prácticas de modificación de
-                                conducta para construir una mentalidad inquebrantable.
-                            </li>
-                            <li>
-                                <i class="fas fa-check-circle"></i>
-                                <strong>Toma de Decisiones:</strong> Estrategias basadas en psicología conductual para
-                                elegir con lógica, claridad y reducir la impulsividad.
+                                Toma decisiones con claridad y convicción, eliminando la duda y la impulsividad.
                             </li>
                         </ul>
                         <p class="servicio-note">
